@@ -1,9 +1,12 @@
 package org.skgif.doi.datacite.mapper;
 
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.skgif.doi.datacite.dto.DataCiteAttributes;
 import org.skgif.doi.datacite.dto.DataCiteDescription;
 import org.skgif.doi.generated.model.ProductAllOfTopics;
@@ -22,8 +25,7 @@ final class DataCiteTitleMapper {
     }
 
     static Map<String, List<String>> titles(DataCiteAttributes attributes) {
-        List<String> values = titleValues(attributes);
-        return values.isEmpty() ? Map.of() : Map.of("en", values);
+        return titlesByLanguage(attributes);
     }
 
     static Map<String, List<String>> abstracts(DataCiteAttributes attributes) {
@@ -35,14 +37,16 @@ final class DataCiteTitleMapper {
      * Unlike {@code Product.titles}/{@code abstracts} (array of strings per language, for
      * multiple manifestations of the same product), {@code Grant.titles}/{@code abstracts} are a
      * plain string per language - so multiple DataCite {@code titles[]}/{@code
-     * descriptions[type=Abstract]} entries are concatenated into one string.
+     * descriptions[type=Abstract]} entries sharing the same {@code lang} are concatenated into
+     * one string per language.
      *
      * @param attributes the DataCite record to read titles from
-     * @return the concatenated titles keyed by "en", or an empty map if none carry a title
+     * @return the concatenated titles keyed by language, or an empty map if none carry a title
      */
     static Map<String, String> grantTitles(DataCiteAttributes attributes) {
-        List<String> values = titleValues(attributes);
-        return values.isEmpty() ? Map.of() : Map.of("en", String.join(" ", values));
+        Map<String, String> joined = new LinkedHashMap<>();
+        titlesByLanguage(attributes).forEach((lang, values) -> joined.put(lang, String.join(" ", values)));
+        return joined;
     }
 
     static Map<String, String> grantAbstracts(DataCiteAttributes attributes) {
@@ -50,13 +54,30 @@ final class DataCiteTitleMapper {
         return values.isEmpty() ? Map.of() : Map.of("en", String.join("\n\n", values));
     }
 
-    private static List<String> titleValues(DataCiteAttributes attributes) {
+    /**
+     * Groups DataCite {@code titles[]} by {@code lang} (defaulting null/blank to {@code "en"}).
+     * DataCite's {@code lang} is free text, not restricted to ISO 639-1 two-letter codes - some
+     * real records use 3-letter ISO 639-2 codes (e.g. {@code "eng"}) instead. Those are passed
+     * through unnormalized rather than guessed at, since this codebase has no reliable ISO
+     * 639-2-to-639-1 conversion table (see SKG_IF_DOI_MAPPING_LIMITATIONS.md).
+     *
+     * @param attributes the DataCite record to read titles from
+     * @return the titles keyed by language, or an empty map if none carry a title
+     */
+    private static Map<String, List<String>> titlesByLanguage(DataCiteAttributes attributes) {
         return Optional.ofNullable(attributes.titles())
                 .orElseGet(List::of)
                 .stream()
-                .map(DataCiteAttributes.Title::title)
-                .filter(Objects::nonNull)
-                .toList();
+                .filter(title -> title.title() != null)
+                .collect(Collectors.groupingBy(
+                        DataCiteTitleMapper::titleLanguage,
+                        LinkedHashMap::new,
+                        Collectors.mapping(DataCiteAttributes.Title::title, Collectors.toList())));
+    }
+
+    private static String titleLanguage(DataCiteAttributes.Title title) {
+        String lang = title.lang();
+        return (lang == null || lang.isBlank()) ? "en" : lang.strip().toLowerCase(Locale.ROOT);
     }
 
     private static List<String> abstractValues(DataCiteAttributes attributes) {
